--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,17 +12,16 @@
     <link rel="stylesheet" href="index.css" />
   </head>
 
-  <body class="min-screen bg-gradient-to-b from-pink-100 via-purple-100 to-indigo-100">
-
+<body class="min-h-screen bg-gradient-to-b from-pink-100 via-purple-100 to-indigo-100 overflow-hidden flex flex-col">
     <header class="sticky top-8 z-10 backdrop-filter backdrop-blur bg-opacity-30 border-b border-gray-200 flex h-12 md:h-10 items-center justify-center px-4 text-2xl md:text-4xl font-sans sm:px-6 lg:px-8 rounded-lg mx-4">
       <span class="transition-transform duration-300 hover:scale-110 cursor-pointer bg-gradient-to-r from-pink-600 to-purple-600 bg-clip-text text-transparent font-nunito font-bold py-1">
         Bunagram
       </span>
     </header>
 
-    <main class="flex items-center justify-center py-24">
-      <div id="app" class="max-w-sm mx-auto"></div>
-    </main>
+     <main class="flex-1 flex items-center justify-center">
+    <div id="app" class="w-full max-w-sm mx-auto"></div>
+  </main>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js" defer></script>
 
