fix(layout): prevent game card overlapping sticky header

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,8 +18,7 @@
         Bunagram
       </span>
     </header>
-
-     <main class="flex-1 flex items-center justify-center">
+    <main class="flex-1 flex justify-center pt-24">
     <div id="app" class="w-full max-w-sm mx-auto"></div>
   </main>
 
