--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
         Bunagram
       </span>
     </header>
-    <main class="flex-1 flex justify-center pt-24">
+    <main class="flex-1 flex justify-center">
     <div id="app" class="w-full max-w-sm mx-auto"></div>
   </main>
 
