feat(ux): enhance mobile scrolling, spacing, and tap responsiveness

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,12 +13,12 @@
   </head>
 
 <body class="min-h-screen bg-gradient-to-b from-pink-100 via-purple-100 to-indigo-100 flex flex-col">
-    <header id="site-header" class="sticky top-8 z-10 backdrop-filter backdrop-blur bg-opacity-30 border-b border-gray-200 flex h-12 md:h-10 items-center justify-center px-4 text-2xl md:text-4xl font-sans sm:px-6 lg:px-8 rounded-lg mx-4">
+    <header id="site-header" class="sticky top-0 md:top-8 z-10 backdrop-filter backdrop-blur bg-opacity-30 border-b border-gray-200 flex h-12 md:h-10 items-center justify-center px-4 text-2xl md:text-4xl font-sans sm:px-6 lg:px-8 rounded-lg mx-4">
       <span class="transition-transform duration-300 hover:scale-110 cursor-pointer bg-gradient-to-r from-pink-600 to-purple-600 bg-clip-text text-transparent font-nunito font-bold py-1">
         Bunagram
       </span>
     </header>
-    <main class="flex-1 flex justify-center">
+    <main class="flex-1 flex justify-center px-4 pb-10 md:pb-0">
     <div id="app" class="w-full max-w-sm mx-auto"></div>
   </main>
 
