--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
       </span>
     </header>
     <main class="flex-1 flex justify-center px-4 pb-10 md:pb-0">
-    <div id="app" class="w-full max-w-sm mx-auto"></div>
+    <div id="app" class="w-full mx-auto"></div>
   </main>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js" defer></script>
